replace select by poll

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -1,44 +1,45 @@
 
-# server
-# {
+# server {
 # 	listen 					8080;
 
-# 	server_name				webserv.42.fr;
+# 	# server_name				webserv.42.fr;
 
-# 	root					/var/www/html;
-# 	index					card.html;
+# 	# root					/var/www/html;
+# 	# index					card.html;
 
-# 	error_page				400 error_page/400.html;
-# 	error_page				403 error_page/403.html;
-# 	error_page				404 error_page/404.html;
+# 	# error_page				400 error_page/400.html;
+# 	# error_page				403 error_page/403.html;
+# 	# error_page				404 error_page/404.html;
 
-# 	client_max_body_size	4096;
+# 	# client_max_body_size	4096;
 # }
 
 server {
-	listen 127.0.0.1:8080;
-	listen 8084;
-	listen 8081;
-	listen 8082;
-	listen 127.0.0.1;
+	listen 8080;
+	# listen 8084;
+	# listen 8081;
+	# listen 8082;
+	# listen 127.0.0.1;
 	listen 127.0.0.1:8083;
-	server_name example.org www.example.org;
-	location / {
-		root /html;
-	}
+
+	# server_name example.org www.example.org;
+
+	# location / {
+	# 	root /html;
+	# }
 }
-server {
-	listen 127.0.0.1:8080;
-	server_name example.com www.example.com;
-}
-server {
-	listen 127.0.0.10:8080;
-	server_name example.net www.example.net;
-}
-server {
-	listen 127.0.0.10:8888;
-}
-server {
-	listen 8084;
-	listen 8085;
-}
+# server {
+# 	listen 127.0.0.1:8080;
+# 	server_name example.com www.example.com;
+# }
+# server {
+# 	listen 127.0.0.10:8080;
+# 	server_name example.net www.example.net;
+# }
+# server {
+# 	listen 127.0.0.10:8888;
+# }
+# server {
+# 	listen 8084;
+# 	listen 8085;
+# }
