--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -22,6 +22,7 @@ server {
 	# listen 127.0.0.1;
 	listen 127.0.0.1:8083;
 
+	client_max_body_size	4096;
 	# server_name example.org www.example.org;
 
 	# location / {
