--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -1,18 +1,23 @@
 
-# server {
-# 	listen 					8080;
+server {
+	listen 					8080;
 
-# 	# server_name				webserv.42.fr;
+	# server_name				webserv.42.fr;
 
-# 	# root					/var/www/html;
-# 	# index					card.html;
+	# root					/var/www/html;
+	# index					card.html;
 
-# 	# error_page				400 error_page/400.html;
-# 	# error_page				403 error_page/403.html;
-# 	# error_page				404 error_page/404.html;
+	error_page				400 error_page/400.html;
+	error_page				403 error_page/403.html;
+	error_page				404 error_page/404.html;
 
-# 	# client_max_body_size	4096;
-# }
+	client_max_body_size	4096;
+
+	location / {
+		root /www;
+		allowed_methods GET;
+	}
+}
 
 server {
 	listen 8080;
@@ -25,9 +30,9 @@ server {
 	client_max_body_size	4096;
 	# server_name example.org www.example.org;
 
-	# location / {
-	# 	root /html;
-	# }
+	location / {
+		root /html;
+	}
 }
 # server {
 # 	listen 127.0.0.1:8080;
