Buf fixed and clean files

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -16,30 +16,34 @@
 
 server {
 	listen 8080;
-	# listen 8084;
-	# listen 8081;
-	# listen 8082;
-	# listen 127.0.0.1;
+	listen 8084;
+	listen 8081;
+	listen 8082;
+	listen 127.0.0.1;
 	listen 127.0.0.1:8083;
 
-	# server_name example.org www.example.org;
+	server_name example.org www.example.org;
 
-	# location / {
-	# 	root /html;
-	# }
+	location / {
+		root /html;
+	}
 }
-# server {
-# 	listen 127.0.0.1:8080;
-# 	server_name example.com www.example.com;
-# }
-# server {
-# 	listen 127.0.0.10:8080;
-# 	server_name example.net www.example.net;
-# }
-# server {
-# 	listen 127.0.0.10:8888;
-# }
-# server {
-# 	listen 8084;
-# 	listen 8085;
-# }
+
+server {
+	listen 127.0.0.1:8080;
+	server_name example.com www.example.com;
+}
+
+server {
+	listen 127.0.0.10:8080;
+	server_name example.net www.example.net;
+}
+
+server {
+	listen 127.0.0.10:8888;
+}
+
+server {
+	listen 8084;
+	listen 8085;
+}
