select best location

--- a/srcs/requirements/conf/official_tests.conf
+++ b/srcs/requirements/conf/official_tests.conf
@@ -10,7 +10,7 @@ server {
 		upload_store /uploads;
 	}
 
-	location /post_body/ {
+	location /post_body {
 		allowed_methods POST;
 		client_max_body_size 100;
 	}
@@ -19,5 +19,10 @@ server {
 		allowed_methods GET;
 		root /YoupiBanane;
 		index youpi.bad_extension;
+	}
+
+	location .cgi {
+		allowed_methods POST;
+		cgi_path /cgi-bin/script.cgi;
 	}
 }
