--- a/srcs/requirements/conf/official_tests.conf
+++ b/srcs/requirements/conf/official_tests.conf
@@ -5,7 +5,7 @@ server {
 		allowed_methods GET;
 	}
 
-	location /put_test/ {
+	location /put_test {
 		allowed_methods PUT;
 		upload_store /uploads;
 	}
@@ -15,7 +15,7 @@ server {
 		client_max_body_size 100;
 	}
 
-	location /directory/ {
+	location /directory {
 		allowed_methods GET;
 		root /YoupiBanane;
 		index youpi.bad_extension;
@@ -23,6 +23,6 @@ server {
 
 	location .cgi {
 		allowed_methods POST;
-		cgi_path /cgi-bin/script.cgi;
+		cgi /cgi-bin/script.cgi;
 	}
 }
