add server root

--- a/srcs/requirements/conf/official_tests.conf
+++ b/srcs/requirements/conf/official_tests.conf
@@ -1,8 +1,10 @@
 server {
 	listen 127.0.0.1:8080;
+	root www;
 
 	location / {
 		allowed_methods GET;
+		index card.html;
 	}
 
 	location /put_test {
@@ -21,8 +23,8 @@ server {
 		index youpi.bad_extension;
 	}
 
-	location .cgi {
+	location .bla {
 		allowed_methods POST;
-		cgi /cgi-bin/script.cgi;
+		cgi ubuntu_cgi_tester;
 	}
 }
