--- a/srcs/requirements/Makefile
+++ b/srcs/requirements/Makefile
@@ -6,7 +6,7 @@
 #    By: tda-silv <tda-silv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/30 09:01:22 by tda-silv          #+#    #+#              #
-#    Updated: 2023/10/07 00:34:31 by tda-silv         ###   ########.fr        #
+#    Updated: 2023/10/07 12:21:25 by tda-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ INC_DIR		= include/
 
 CC			= c++
 
-CFLAGS		= -Wall -Wextra -Wshadow -std=c++98
+CFLAGS		= -Wall -Wextra -Werror -Wshadow -std=c++98
 
 # **************************************************************************** #
 #                                                                              #
