change location root from /www to www

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -14,12 +14,12 @@ server {
 	client_max_body_size	4096;
 
 	location / {
-		root /www;
-		allowed_methods GET;
+		root www;
+		allowed_methods GET POST;
 		return http://example.org/;
 		autoindex on;
 		index index.html index.htm;
-		cgi .py cgi-bin/script.cgi;
+		cgi www/cgi-bin/script.cgi;
 		upload_store upload/;
 	}
 }
@@ -36,7 +36,7 @@ server {
 	# server_name example.org www.example.org;
 
 	location / {
-		root /html;
+		root html;
 	}
 }
 
