remove cgi directive in directory location

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -19,7 +19,7 @@ server {
 		return http://example.org/;
 		autoindex on;
 		index index.html index.htm;
-		cgi www/cgi-bin/script.cgi;
+		# cgi www/cgi-bin/script.cgi;
 		upload_store upload/;
 	}
 }
