add server's root and location /cgi-bin

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -4,7 +4,7 @@ server {
 
 	# server_name				webserv.42.fr;
 
-	# root					/var/www/html;
+	root					www;
 	# index					card.html;
 
 	error_page				400 error_page/400.html;
@@ -14,13 +14,16 @@ server {
 	client_max_body_size	4096;
 
 	location / {
-		root www;
 		allowed_methods GET POST;
 		return http://example.org/;
 		autoindex on;
 		index index.html index.htm;
 		# cgi www/cgi-bin/script.cgi;
 		upload_store upload/;
+	}
+
+	location /cgi-bin {
+		autoindex on;
 	}
 }
 
