--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -1,8 +1,8 @@
 
 server {
-	listen 					8080;
+	listen 					127.0.0.1:8080;
 
-	# server_name				webserv.42.fr;
+	server_name				webserv.42.fr;
 
 	root					www;
 	# index					card.html;
@@ -15,7 +15,6 @@ server {
 
 	location / {
 		allowed_methods GET POST;
-		return http://example.org/;
 		autoindex on;
 		index index.html index.htm;
 		# cgi www/cgi-bin/script.cgi;
@@ -28,36 +27,42 @@ server {
 }
 
 server {
-	listen 8080;
-	listen 8084;
-	listen 8081;
-	listen 8082;
-	listen 127.0.0.1;
-	listen 127.0.0.1:8083;
+	# listen 80;
+	listen 127.0.0.1:8080;
+# 	listen 8084;
+# 	listen 8081;
+# 	listen 8082;
+	# listen 127.0.0.1:80;
+# 	listen 127.0.0.1:8083;
 
-	client_max_body_size	4096;
-	# server_name example.org www.example.org;
+	root www;
+# 	client_max_body_size	4096;
+	server_name localhost:8080;
 
 	location / {
-		root html;
+		index card.html;
+	}
+
+	location /where_is_card {
+		rewrite /;
 	}
 }
 
-server {
-	listen 127.0.0.1:8080;
-	server_name example.com www.example.com;
-}
+# server {
+# 	listen 127.0.0.1:8080;
+# 	server_name example.com www.example.com;
+# }
 
-server {
-	listen 127.0.0.10:8080;
-	server_name example.net www.example.net;
-}
+# server {
+# 	listen 127.0.0.10:8080;
+# 	server_name example.net www.example.net;
+# }
 
-server {
-	listen 127.0.0.10:8888;
-}
+# server {
+# 	listen 127.0.0.10:8888;
+# }
 
-server {
-	listen 8084;
-	listen 8085;
-}
+# server {
+# 	listen 8084;
+# 	listen 8085;
+# }
