add server with empty file for siege

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -48,6 +48,16 @@ server {
 	}
 }
 
+server {
+	listen 127.0.0.1:8081;
+
+	root www;
+
+	location / {
+		index empty_file;
+	}
+}
+
 # server {
 # 	listen 127.0.0.1:8080;
 # 	server_name example.com www.example.com;
