--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -37,7 +37,7 @@ server {
 
 	root www;
 # 	client_max_body_size	4096;
-	server_name localhost:8080;
+	server_name localhost;
 
 	location / {
 		index card.html;
