add uploads location

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -24,6 +24,11 @@ server {
 	location /cgi-bin {
 		autoindex on;
 	}
+
+	location /uploads {
+		allowed_methods GET DELETE;
+		autoindex on;
+	}
 }
 
 server {
