--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -9,7 +9,7 @@ server {
 
 	error_page				400 error_page/400.html;
 	error_page				403 error_page/403.html;
-	error_page				404 error_page/404.html;
+	# error_page				404 error_page/404_2.html;
 
 	client_max_body_size	4096;
 
@@ -34,6 +34,8 @@ server {
 # 	listen 8082;
 	# listen 127.0.0.1:80;
 # 	listen 127.0.0.1:8083;
+
+	# error_page				404 error_page/404_2.html;
 
 	root www;
 # 	client_max_body_size	4096;
