--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -18,7 +18,7 @@ server {
 		autoindex on;
 		index index.html index.htm;
 		# cgi www/cgi-bin/script.cgi;
-		upload_store upload/;
+		upload_store uploads/;
 	}
 
 	location /cgi-bin {
