--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -9,7 +9,7 @@ server {
 
 	error_page				400 error_page/400.html;
 	error_page				403 error_page/403.html;
-	# error_page				404 error_page/404_2.html;
+	 error_page				404 error_page/404_2.html;
 
 	client_max_body_size	4096;
 
@@ -29,57 +29,62 @@ server {
 		allowed_methods GET DELETE;
 		autoindex on;
 	}
-}
 
-server {
-	# listen 80;
-	listen 127.0.0.1:8080;
-# 	listen 8084;
-# 	listen 8081;
-# 	listen 8082;
-	# listen 127.0.0.1:80;
-# 	listen 127.0.0.1:8083;
-
-	# error_page				404 error_page/404_2.html;
-
-	root www;
-# 	client_max_body_size	4096;
-	server_name localhost;
-
-	location / {
-		index card.html;
-	}
-
-	location /where_is_card {
-		rewrite /;
+	location .cgi {
+		allowed_methods POST;
+		cgi www/cgi-bin/script.cgi;
 	}
 }
 
-server {
-	listen 127.0.0.1:8081;
+#server {
+#	# listen 80;
+#	listen 127.0.0.1:8080;
+## 	listen 8084;
+## 	listen 8081;
+## 	listen 8082;
+#	# listen 127.0.0.1:80;
+## 	listen 127.0.0.1:8083;
 
-	root www;
+#	# error_page				404 error_page/404_2.html;
 
-	location / {
-		index empty_file;
-	}
-}
+#	root www;
+## 	client_max_body_size	4096;
+#	server_name localhost;
 
-# server {
-# 	listen 127.0.0.1:8080;
-# 	server_name example.com www.example.com;
-# }
+#	location / {
+#		index card.html;
+#	}
 
-# server {
-# 	listen 127.0.0.10:8080;
-# 	server_name example.net www.example.net;
-# }
+#	location /where_is_card {
+#		rewrite /;
+#	}
+#}
 
-# server {
-# 	listen 127.0.0.10:8888;
-# }
+#server {
+#	listen 127.0.0.1:8081;
 
-# server {
-# 	listen 8084;
-# 	listen 8085;
-# }
+#	root www;
+
+#	location / {
+#		index empty_file;
+#	}
+#}
+
+## server {
+## 	listen 127.0.0.1:8080;
+## 	server_name example.com www.example.com;
+## }
+
+## server {
+## 	listen 127.0.0.10:8080;
+## 	server_name example.net www.example.net;
+## }
+
+## server {
+## 	listen 127.0.0.10:8888;
+## }
+
+## server {
+## 	listen 8084;
+## 	listen 8085;
+## }
