add cgi for .py extensions

--- a/srcs/requirements/conf/webserv.conf
+++ b/srcs/requirements/conf/webserv.conf
@@ -29,6 +29,10 @@ server {
 		allowed_methods GET DELETE;
 		autoindex on;
 	}
+
+	location .py {
+		cgi www/cgi-bin/python_cgi.py;
+	}
 }
 
 server {
